--- a/inst/slurm.tmpl
+++ b/inst/slurm.tmpl
@@ -7,7 +7,7 @@ log.file = paste0(dir,log.file)
 #SBATCH --job-name=<%= job.name %>
 #SBATCH --output=<%= log.file %>
 #SBATCH --error=<%= log.file %>
-#SBATCH --time=<%= ceiling(resources$walltime / 60) %>
+#SBATCH --time=500
 #SBATCH --ntasks=1
 #SBATCH --cpus-per-task=<%= ifelse(is.null(resources$ncpus),1,resources$ncpus) %>
 #SBATCH --mem-per-cpu=<%= resources$memory %>
