--- a/inst/slurm.tmpl
+++ b/inst/slurm.tmpl
@@ -11,6 +11,7 @@ log.file = paste0(dir,log.file)
 #SBATCH --ntasks=1
 #SBATCH --cpus-per-task=<%= ifelse(is.null(resources$ncpus),1,resources$ncpus) %>
 #SBATCH --mem-per-cpu=<%= resources$memory %>
+#SBATCH --partition=owos
 
 ## Run R:
 ## we merge R output with stdout from SLURM, which gets then logged via --output option
