fix ntasks and ncpus

--- a/inst/slurm.tmpl
+++ b/inst/slurm.tmpl
@@ -9,8 +9,8 @@ log.file = paste0(dir,log.file)
 #SBATCH --error=<%= log.file %>
 #SBATCH --time=100
 #SBATCH --ntasks=1
-#SBATCH --cpus-per-task=<%= ifelse(is.null(resources$ncpus),1,resources$ncpus) %>
-#SBATCH --mem-per-cpu=<%= resources$memory %>
+#SBATCH --cpus-per-task=1
+#SBATCH --mem-per-cpu=512
 #SBATCH --partition=gecco
 
 ## Run R:
